--- a/TODO
+++ b/TODO
@@ -1,3 +1,12 @@
+# TODOs
+
+## Compatibility
+Systems:
+* ~~Unix~~ :x:
+  * ~~Raspbian~~ :x:
+  * ~~Debian~~ :x:
+  * ~~Ubuntu~~ :x:
+
 powershell
 
 include
